@@ -1,7 +1,8 @@
-Changes in QMPlay2 build 15.11.29:
+Changes in QMPlay2 build 15.11.29:-
 	- setting priorities of decoders and A/V outputs is now more convenient,
 	- improve QOpenGLWidget performance (Qt5 only, not used by default),
 	- support for HEVC, VP8 and VP9 decoding in VA-API (not tested!),
+	- play next entry after playback error (as default),
 	- support for HEVC decoding in VDPAU,
 	- removed console for Windows,
 	- fix decoding BINK Video,
